--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_localization: ^0.1.14
   intl: ^0.18.1
   syncfusion_flutter_gauges: ^23.1.36
+  like_button: ^2.0.5
 
 dev_dependencies:
   flutter_test:
