--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl: ^0.18.1
   syncfusion_flutter_gauges: ^23.1.36
   like_button: ^2.0.5
+  gauge_indicator: ^0.4.3
 
 dev_dependencies:
   flutter_test:
