--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   syncfusion_flutter_gauges: ^23.1.36
   like_button: ^2.0.5
   gauge_indicator: ^0.4.3
+  panara_dialogs: ^0.1.4
 
 dev_dependencies:
   flutter_test:
