--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   like_button: ^2.0.5
   gauge_indicator: ^0.4.3
   panara_dialogs: ^0.1.4
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
