--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   gauge_indicator: ^0.4.3
   panara_dialogs: ^0.1.4
   flutter_slidable: ^3.0.0
+  easy_localization: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +83,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
+    - assets/translations/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
