--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.7
   numberpicker: ^2.1.2
-  flutter_localization: ^0.1.14
   intl: ^0.18.1
   syncfusion_flutter_gauges: ^23.1.36
   like_button: ^2.0.5
@@ -51,6 +50,8 @@ dependencies:
   panara_dialogs: ^0.1.4
   flutter_slidable: ^3.0.0
   easy_localization: ^3.0.3
+  page_view_dot_indicator: ^2.3.0
+  dots_indicator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
