--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  share_plus: ^7.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   get_it: ^7.6.4
@@ -52,6 +53,7 @@ dependencies:
   easy_localization: ^3.0.3
   page_view_dot_indicator: ^2.3.0
   dots_indicator: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
