change ui card info

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>com.appstore.bmi</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -29,6 +29,10 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>CFBundleLocalizations</key>
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>itms</string>
+    </array>
     <array>
     	<string>en</string>
     	<string>vi</string>
